Video playback buttons fixed. Left side title, title shadow and buttons aligned.

--- a/src/projects/RNProject.css
+++ b/src/projects/RNProject.css
@@ -8,8 +8,33 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
+    align-items: center;
 }
+
+.project1 .left #title{
+   text-align: center;
+}
+
+.project1 .left #title::after{
+    content: 'Photo Cacher';
+    text-shadow: 0px 12px 10px rgba(0, 0, 0, .3);
+    display: block;
+    color: rgba(0,0,0,.1);
+    transform-style: preserve-3d;
+    transform: rotate3d(1, 0, 0, 145deg) scale(1, 3) rotateX(60deg) ;
+    margin-top: 24px
+}
+
+
+.project1 .left .buttonsContainer{
+    position: relative;
+    bottom: 13%;
+    display: flex;
+    width: 100%;
+    justify-content: space-evenly;
+}
+
 
 .project1 .right{
     flex: 1;
@@ -22,9 +47,9 @@
 .project1 .phone{
     transform-style: preserve-3d;
     transform: perspective(1000px) rotateZ(20deg) rotateY(-20deg) rotateX(20deg); 
-    
     aspect-ratio: 9/20;
     width: 250px;
+    height: 100%;
 }
 
 .project1 .phone .panel{
@@ -35,21 +60,24 @@
     background-color: black;
     aspect-ratio: 9/20;
     width: 100%;
-    box-shadow: 10px 10px 0px 0px rgba(128,128,128,1),50px 50px 100px 50px rgba(0,0,0,.7);
-    
-   
+    box-shadow: 9px 10px 0px 0px rgba(128,128,128,1),50px 50px 100px 50px rgba(0,0,0,.7);
 }
 
-.project1 .phone .panel.front #title{
+.project1 .phone .panel.front .MuiTypography-root{
     text-align: center;
-    margin: 10% 0
+    padding-top: 10% 
 }
 
 .project1 .right video{
     width:100%;
-    padding: 0 10%
+    padding: 0 10%;
 }
 
 .project1 .phone .panel.front .vidControls{
     text-align: center;
+    padding-bottom: 5%;
+}
+
+.project1 .phone .panel.front .vidControls .MuiButton-root{
+    z-index: 99;
 }
